--- a/style.css
+++ b/style.css
@@ -1,10 +1,27 @@
+
+body {
+	height: 100%;
+	margin-left: 0;
+	margin-right: 0;
+	overflow: hidden;
+	width: 100%;
+}
+
+span {
+	display: inline-block;
+	vertical-align: middle;
+}
+
 #buttons {
 	text-align: center;
+	margin-left: 1%;
+	margin-right: 1%;
+	width: 98%;
 }
 
 #calc {
-	width: 30%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 }
 
 #numbers {
@@ -21,15 +38,14 @@
 }
 
 #result {
-	background-color: white;
 	border: 1px solid black;
 	border-radius: 10px;
-	max-height: 1.2em;
-	min-height: 1.2em;
-	padding-left: 1em;
-	padding-right: 1em;
+	display: inline-block;
+	margin-left: 1%;
+	margin-right: 1%;
+	padding: 1%;
 	text-align: right;
-	width: 100%;
+	width: 96%;
 }
 
 .button {
@@ -44,9 +60,4 @@
 .row {
 	display: inline-block;
 	width: 100%;
-}
-
-span {
-	display: inline-block;
-	vertical-align: middle;
 }
