--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
 
 body {
-	height: 100%;
-	margin-left: 0;
-	margin-right: 0;
-	overflow: hidden;
-	width: 100%;
-	color: #ffffff;
 	background: -moz-linear-gradient(
 		top,
 		#666 0%,
@@ -14,21 +8,12 @@ body {
 		linear, left top, left bottom, 
 		from(#666),
 		to(#333));
-	-moz-border-radius: 0px;
-	-webkit-border-radius: 0px;
-	border-radius: 0px;
-	-moz-box-shadow:
-		0px 1px 3px rgba(000,000,000,0.5),
-		inset 0px 0px 2px rgba(255,255,255,0.7);
-	-webkit-box-shadow:
-		0px 1px 3px rgba(000,000,000,0.5),
-		inset 0px 0px 2px rgba(255,255,255,0.7);
-	box-shadow:
-		0px 1px 3px rgba(000,000,000,0.5),
-		inset 0px 0px 2px rgba(255,255,255,0.7);
-	text-shadow:
-		0px -1px 0px rgba(000,000,000,0.4),
-		0px 1px 0px rgba(255,255,255,0.3);
+	color: #ffffff;
+	height: 100%;
+	margin-left: 0;
+	margin-right: 0;
+	overflow: hidden;
+	width: 100%;
 }
 
 span {
@@ -40,6 +25,7 @@ span {
 	text-align: center;
 	margin-left: 1%;
 	margin-right: 1%;
+	margin-top: 2%;
 	width: 98%;
 }
 
@@ -62,34 +48,51 @@ span {
 }
 
 #result {
-	border: 1px solid black;
+	color: #000000;
+	background: #fff;
+		to(#ffffff));
+	border: 1px solid #555555;
 	border-radius: 10px;
+	-moz-box-shadow:
+		0px 0px 0px rgba(000,000,000,0.5),
+		inset 3px -3px 4px rgba(153,153,153,0.6);
+	-webkit-box-shadow:
+		0px 0px 0px rgba(000,000,000,0.5),
+		inset 3px -3px 4px rgba(153,153,153,0.6);
+	box-shadow:
+		0px 0px 0px rgba(000,000,000,0.5),
+		inset 3px -3px 4px rgba(153,153,153,0.6);
 	display: inline-block;
 	margin-left: 1%;
 	margin-right: 1%;
 	padding: 1%;
 	text-align: right;
 	width: 96%;
-	color: #000000;
-	background: #fff;
-		to(#ffffff));
-	border: 1px solid #969696;
-	-moz-box-shadow:
-		0px 0px 0px rgba(000,000,000,0.5),
-		inset 3px -3px 4px rgba(153,153,153,0.2);
-	-webkit-box-shadow:
-		0px 0px 0px rgba(000,000,000,0.5),
-		inset 3px -3px 4px rgba(153,153,153,0.2);
-	box-shadow:
-		0px 0px 0px rgba(000,000,000,0.5),
-		inset 3px -3px 4px rgba(153,153,153,0.2);
-	text-shadow:
-		0px -1px 0px rgba(000,000,000,0.4),
-		0px 1px 0px rgba(255,255,255,0.3);
 }
 
 .black {
-	background-color: black;
+	color: #ffffff;
+	background: -moz-linear-gradient(
+		top,
+		#757575 0%,
+		#3d3d3d);
+	background: -webkit-gradient(
+		linear, left top, left bottom, 
+		from(#757575),
+		to(#3d3d3d));
+	border: 1px solid #2e2e2e;
+	-moz-box-shadow:
+		0px 1px 3px rgba(000,000,000,0.5),
+		inset 0px 0px 2px rgba(255,255,255,0.7);
+	-webkit-box-shadow:
+		0px 1px 3px rgba(000,000,000,0.5),
+		inset 0px 0px 2px rgba(255,255,255,0.7);
+	box-shadow:
+		0px 1px 3px rgba(000,000,000,0.5),
+		inset 0px 0px 2px rgba(255,255,255,0.7);
+	text-shadow:
+		0px -1px 0px rgba(000,000,000,0.4),
+		0px 1px 0px rgba(255,255,255,0.3);
 }
 
 .blue {
@@ -125,7 +128,9 @@ span {
 }
 
 .dark {
-	background-color: gray;
+	background-color: #555;
+	border: 1px solid #444;
+	color: #999;
 }
 
 .green {
@@ -209,5 +214,26 @@ span {
 }
 
 .white {
-	background-color: white;
+	color: #ffffff;
+	background: -moz-linear-gradient(
+		top,
+		#f2f2f2 0%,
+		#bdbdbd);
+	background: -webkit-gradient(
+		linear, left top, left bottom, 
+		from(#f2f2f2),
+		to(#bdbdbd));
+	border: 1px solid #9c9c9c;
+	-moz-box-shadow:
+		0px 1px 3px rgba(000,000,000,0.5),
+		inset 0px 0px 2px rgba(255,255,255,0.7);
+	-webkit-box-shadow:
+		0px 1px 3px rgba(000,000,000,0.5),
+		inset 0px 0px 2px rgba(255,255,255,0.7);
+	box-shadow:
+		0px 1px 3px rgba(000,000,000,0.5),
+		inset 0px 0px 2px rgba(255,255,255,0.7);
+	text-shadow:
+		0px -1px 0px rgba(000,000,000,0.4),
+		0px 1px 0px rgba(255,255,255,0.3);
 }
