--- a/style.css
+++ b/style.css
@@ -13,12 +13,25 @@ body {
 	margin-left: 0;
 	margin-right: 0;
 	overflow: hidden;
+	text-align: center;
 	width: 100%;
 }
 
 span {
 	display: inline-block;
 	vertical-align: middle;
+}
+
+#about {
+	background-color: rgba(0,0,0,0.6);
+	color: #fff;
+	font-family: Arial;
+	height: 100%;
+	left: 0;
+	padding-top: 10%;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 #buttons {
